hphp/hack/test/typecheck/shape_key_exists7.php.exp
File "shape_key_exists7.php", line 6, characters 3-28:
Too few arguments (Typing[4104])
File "hhi_lib__srcs/Shapes.hhi", line 43, characters 26-34:
Definition is here
