hphp/hack/test/typecheck/shape_key_exists7.php
<?hh // strict

// Too few arguments

function test(): void {
  Shapes::keyExists(shape());
}
